Fix security vulnerabilities and anti-patterns
- Replace unsafe Runtime.exec() with ProcessBuilder in DefaultFFmpegExecutor
- Add robust command argument parsing to prevent command injection
- Fix static fields anti-pattern in FileManager interface
- Move static utility methods to FileManagerUtils class
- Update all implementations to use instance-based approach

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>